resource/iptables
# Generated by iptables-save v1.4.21 on Wed Dec 23 15:25:26 2020
*nat
:INPUT ACCEPT [12:654]
:OUTPUT ACCEPT [15:1083]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -j MASQUERADE
COMMIT
# Completed on Wed Dec 23 15:25:26 2020
# Generated by iptables-save v1.4.21 on Wed Dec 23 15:25:26 2020
*filter
:INPUT ACCEPT [706:74729]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [678:139476]
-A INPUT -i lo -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
-A INPUT -p udp -m state --state NEW -m udp --dport 7715 -j ACCEPT
-A INPUT -p udp -m state --state NEW -m udp --dport 8112 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 3306 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited
#-A FORWARD -j REJECT --reject-with icmp-host-prohibited
COMMIT
# Completed on Wed Dec 23 15:25:26 2020
